Some Mistakes Corrected

--- a/PimaIndiansDiabetes.Rmd
+++ b/PimaIndiansDiabetes.Rmd
@@ -18,7 +18,7 @@ library(kmed)
 library(mlbench)
 ```
 
-## Loading Glass Dataset
+## Loading Pima Indians Diabetes Dataset
 ```{r}
 # attach the Pima Indians Diabetes Database to the environment
 data("PimaIndiansDiabetes")
